removed arrow from select dropdown and added typed.js mesage

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -93,6 +93,8 @@
     border: none;
     outline: none;
     position: relative;
+    margin: 0 auto;
+    text-align: center !important;
     &:active {
       border: none;
       outline: none;
