--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -13,6 +13,7 @@
   justify-content: space-evenly;
   align-items: flex-start;
   margin: 20px 0;
+  z-index: 3;
 }
 
 .card {
@@ -22,7 +23,7 @@
   padding: 20px;
   min-height: 200px;
   width: 250px;
-  box-shadow: #4B453E, 15%;
+  box-shadow: 0 0 5px #4B453E;
   margin: 20px;
   background-color: #f1ede9;
   border-radius: 5px;
@@ -79,7 +80,7 @@
     cursor: pointer;
     border: none;
     outline: none;
-    box-shadow: 1px 1px gray;
+    box-shadow: 0 0 5px #4B453E;
     font-size: 20px;
   }
 }
@@ -99,5 +100,14 @@
       border: none;
       outline: none;
     }
+    box-shadow: 0 0 5px #4B453E;
   }
+}
+
+.videoTag {
+  position: absolute;
+  background-position: center;
+  background-size: cover;
+  width: 100vw;
+  filter: brightness(0.4);
 }
