--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -86,21 +86,55 @@
 }
 
 .customSelect {
-  select {
-    width: 200px;
-    height: 50px;
-    border-radius: 50px;
-    padding: 10px 20px;
-    border: none;
-    outline: none;
-    position: relative;
-    margin: 0 auto;
-    text-align: center !important;
-    &:active {
-      border: none;
-      outline: none;
-    }
-    box-shadow: 0 0 5px #4B453E;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.dd_toggler {
+  cursor: pointer;
+  background-color: #f0787a;
+  box-shadow: 0 0 5px #4B453E;
+  padding: 10px 20px;
+  margin-bottom: 10px;
+  width: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50px;
+  color: white;
+}
+
+.airlineList {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.dd_item {
+  padding: 5px 10px;
+  background-color: white;
+  color: black;
+  border: 1px solid #f0787a;
+  box-shadow: 0 0 5px #4B453E;
+  border-radius: 50px;
+  margin-top: 10px;
+  cursor: pointer;
+  &:hover{
+    background-color: #e7dfd6;
+  }
+  &:not(:last-child){
+    margin-right: 16px;
+  }
+}
+
+.activeAirline {
+  background-color: #5cc532;
+  color: white;
+  &:hover{
+    background-color: #5cc532;
   }
 }
 
