--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -14,6 +14,7 @@
   align-items: flex-start;
   margin: 20px 0;
   z-index: 3;
+  min-width: 100%;
 }
 
 .card {
@@ -144,4 +145,22 @@
   background-size: cover;
   width: 100vw;
   filter: brightness(0.4);
+}
+
+@media (max-width: 600px) {
+  .container {
+    padding: 1rem 0.5rem;
+    min-height: unset;
+  }
+  .cardDeck {
+    flex-direction: column;
+    align-items: center;
+    svg {
+      display: none;
+    }
+    .card {
+      width: 100%;
+      margin: 0 0 20px 0;
+    }
+  }
 }
